[b]Version 0.8.4[/b]:

(2013-01-13)
 * Add bik and smk to the list of video extensions.
 * Add aac and dts to the list of audio extensions.
 
(2013-01-12)
 * Add mts to the list of video extensions.

(2012-12-23)
 * Ignore other mouse events if the window is been moved by dragging
   the video area.


[b]Version 0.8.3[/b]:

(2012-12-20)
 * Fix for youtube playback.

(2012-11-28)
 * Show the mouse cursor immediately when the mouse is moved on the video
   area.
 * Help -> FAQ opens http://smplayer.sourceforge.net/faq.php


[b]Version 0.8.2[/b]:

(2012-11-15)
 * New option Help -> Open configuration folder.

(2012-11-12)
 * Don't use slices as default, as it seems to cause problems when using
   multiple threads.

(2012-11-08)
 * (Windows) When a new version is run for the first time it tries to
   create a font cache before showing the GUI. Avoids that the font cache
   would be created when the user plays the first video.

(2012-11-05)
 * (Windows) Don't change the priority of the smplayer process. Fixes a
   freeze that may happen on windows xp when you click on the video window.

(2012-11-03)
 * Don't use -fontconfig with mplayer2.

(2012-10-28)
 * Port the umplayer skins to smplayer.

(2012-10-22)
 * Bug fix: stop playback when the user selects to play the next
   item in the playlist and there are no more items to play.

(2012-10-17)
 * Move the main window by dragging in the video area.
   Code copied from umplayer.

(2012-10-05)
 * Add support for 6.1 and 7.1 audio output. Patch by AdrianoML
   (http://smplayer.sourceforge.net/forum/viewtopic.php?f=4&t=5655)

(2012-09-30)
 * Add new section "Privacy" in Preferences -> Interface.
 * Move max. items for recent files to the privacy section.
 * Add an option to remember or not the last directories.
 * Add an option to select the maximum number of items in the
   Open->URL dialog.

(2012-09-28)
 * (Linux) Install larger icons. smplayer.svg contributed by akovia